Fix nr 1 for the form on IOS devices + grid-template is not centered on smaller screens

--- a/src/app/form/contact/contact.component.scss
+++ b/src/app/form/contact/contact.component.scss
@@ -71,6 +71,7 @@ form {
   .checkbox-policy {
     display: flex;
     align-items: center;
+    cursor: pointer;
     margin-bottom: 20px;
 
     input {
@@ -176,3 +177,8 @@ button:disabled {
 }
 
 
+@media (hover: none) {
+  .checkbox-policy {
+    display: unset;
+  }
+}
